--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
     "nodemon": "^3.1.10",
+    "prisma": "^6.12.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
@@ -13,6 +14,7 @@
     "start": "node dist/app.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.12.0",
     "chalk": "^5.4.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
