--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "openai": "^5.10.2"
+    "openai": "^5.10.2",
+    "zod": "^3.25.76"
   }
 }
