--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "rootDir": "src",
+    "rootDir": ".",
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
-    "typeRoots": ["./@types"]
+    "types": ["node", "jest"],
+    "typeRoots": ["./@types", "./node_modules/@types"]
   }
 }
