Feat: update tsconfig to include express types and specify include paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
-    "types": ["node", "jest"],
+    "types": ["node", "jest", "express"],
     "typeRoots": ["./@types", "./node_modules/@types"]
-  }
+  },
+  "include": ["src", "@types"]
 }
